<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_md"
    android:layout_marginBottom="@dimen/margin_md"
    android:layout_marginStart="@dimen/margin_md"
    android:layout_marginEnd="@dimen/margin_md"
    tools:context=".fragment.RegisterFragment">

    <android.support.design.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:id="@+id/mc_recoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_md"
        android:paddingEnd="@dimen/padding_md"
        android:paddingBottom="@dimen/padding_md"
        android:paddingTop="@dimen/padding_md"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                android:layout_marginStart="@dimen/margin_md"
                android:layout_marginEnd="@dimen/margin_md"
                android:gravity="center"
                android:textSize="@dimen/registerWelcomeTextSize"
                android:text="@string/recoverPasswordText"
                fontPath="fonts/HelveticaNeueCondensedBold.ttf" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_recoverUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                android:layout_marginEnd="@dimen/margin_md"
                android:layout_marginStart="@dimen/margin_md"
                android:layout_marginBottom="@dimen/margin_sm"
                android:inputType="text"
                android:imeOptions="actionSend"
                android:hint="@string/registerUsernameHint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:layout_marginStart="@dimen/margin_md"
                android:layout_marginEnd="@dimen/margin_md"
                android:layout_marginBottom="@dimen/margin_sm"
                android:gravity="center"
                android:textSize="@dimen/recoverORTextSize"
                android:text="@string/recoverPasswordOrText"
                fontPath="fonts/HelveticaNeueCondensedBold.ttf" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_recoverEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:layout_marginEnd="@dimen/margin_md"
                android:layout_marginStart="@dimen/margin_md"
                android:inputType="textEmailAddress"
                android:imeOptions="actionSend"
                android:hint="@string/registerEmailHint"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_recoverMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_md"
                android:layout_marginTop="@dimen/margin_md"
                android:layout_marginEnd="@dimen/margin_md"
                android:layout_marginBottom="@dimen/margin_md"
                android:background="@color/btnLoginColor"
                android:text="@string/btnRecoverPassword" />

        </LinearLayout>

    </android.support.design.card.MaterialCardView>

</RelativeLayout>