<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_md"
        android:layout_marginStart="@dimen/margin_md"
        android:layout_marginEnd="@dimen/margin_md"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_feedProfilePicture"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/avatar_icon"
            android:contentDescription="@string/feedProfilePictureContentDescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_md"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_feedUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                fontPath="fonts/HelveticaNeueCondensedBold.ttf"/>

            <TextView
                android:id="@+id/tv_feedPostedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                fontPath="fonts/HelvaticaNeue.ttf"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_feedMentionedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_md"
        android:layout_marginStart="@dimen/margin_md" />

    <TextView
        android:id="@+id/tv_feedLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_md" />

    <TextView
        android:id="@+id/tv_feedStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_md"
        android:layout_marginStart="@dimen/margin_md" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_md"
        android:layout_marginStart="@dimen/margin_md"
        android:layout_marginEnd="@dimen/margin_md"
        android:layout_marginBottom="@dimen/margin_md">

        <Button
            android:id="@+id/btn_feedLike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFeedLike" />

        <Button
            android:id="@+id/btn_feedComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFeedComment" />

        <Button
            android:id="@+id/btn_feedAnnotate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFeedAnnotate" />

    </LinearLayout>

</LinearLayout>